--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   background-position: center;
   color: white;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .info {
@@ -22,4 +23,17 @@ body {
 
 h2 {
   background-color: #752800;
+}
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: contain;
+}
+
+@media (max-width: 767.98px) {
+  .card-img-top {
+    width: 100%;
+    height: 30vw;
+    object-fit: contain;
+  }
 }
