--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   color: white;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  font-family: 'Lato', sans-serif;
 }
 
 .info {
@@ -27,16 +28,25 @@ h2 {
 .card-img-top {
     width: 100%;
     height: 15vw;
-    object-fit: contain;
+    object-fit: fill;
 }
 
 @media (max-width: 767.98px) {
   .card-img-top {
     width: 100%;
     height: 30vw;
-    object-fit: contain;
+    object-fit: fill;
   }
 }
+
+@media (max-width: 991.98px) {
+  .card-img-top {
+    width: 100%;
+    height: 30vw;
+    object-fit: fill;
+  }
+}
+
 
 .container-fluid {
   height: 11vw;
