--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2 {
   .card-img-top {
     width: 100%;
     height: 40vw;
-    object-fit: fill;
+    object-fit:contain;
   }
 }
 
@@ -44,7 +44,7 @@ h2 {
   .card-img-top {
     width: 100%;
     height: 40vw;
-    object-fit: fill;
+    object-fit: contain;
   }
 }
 
